# 100-days-of-rust

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  requirements.txt
projects/: projects.code-workspace
projects/ch4_playground/: Cargo.toml
projects/ch4_playground/src/: main.rs
projects/ch5_playground/: Cargo.toml
projects/ch5_playground/src/: main.rs
projects/ch6_playground/: Cargo.toml
projects/ch6_playground/src/: main.rs
projects/concurrency_expt/: Cargo.toml
projects/concurrency_expt/src/: main.rs
projects/cookbook-concurrency/: Cargo.toml
projects/cookbook-concurrency/src/: main.rs
projects/cookbook-generate-random-values/: Cargo.toml
projects/cookbook-generate-random-values/src/: main.rs
projects/cookbook-science/: Cargo.toml
projects/cookbook-science/src/: main.rs
projects/cookbook-web-programming/: Cargo.toml
projects/cookbook-web-programming/src/: main.rs
projects/grrs/: Cargo.toml  README.md
projects/grrs/src/: lib.rs  main.rs
projects/grrs/tests/: cli.rs
projects/guessing_game/src/: main.rs
projects/hello_world/: main
projects/omnivore-api-demo/: Cargo.toml  secrets.yaml
projects/omnivore-api-demo/src/: main.rs
projects/rectangles/src/: main.rs
projects/rust-bio-playground/: Cargo.toml
projects/rust-bio-playground/src/: main.rs
projects/rust-by-example/src/: main.rs
projects/rust-cookbook-generate-random-values/: Cargo.toml
projects/rust-cookbook-generate-random-values/src/: main.rs
