[package]
name = "cookbook-web-programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
error-chain = "0.12.4"
futures = "0.3.28"
log = "0.4.20"
reqwest = {version = "0.11.18", features = ["json"]}
select = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.12", features = ["full"] }
url = "2.4.0"
