[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Cook <fake-email@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/cookjo/100-days-of-rust/projects/grrs"
repository = "https://github.com/cookjo/100-days-of-rust/projects/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"
